<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sale it!</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="transition_address">tvaddress</string>
    <string name="transition_button_call">tvbutton_call</string>
    <string name="transition_button_email">tvbutton_email</string>
    <string name="transition_button_location">tvbutton_location</string>
    <string name="transition_cardview">tvcardview</string>
    <string name="transition_name">tvname</string>
    <string name="transition_profile">tvprofile</string>
    <string name="transition_toolbar">transition_toolbar</string>
    <string name="action_settings">Settings</string>
    <string name="static_user_id">561ae9914cfdcc0420e8252a</string>
    <string name="static_token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJfaWQiOiI1NjFhZTk5MTRjZmRjYzA0MjBlODI1MmEiLCJuYW1lIjoiSm9yZ2UgQWxlamFuZHJvIEZpZ3Vlcm9hIFDDqXJleiIsInVzZXIiOiJ5a254NCIsImltYWdlIjoiaHR0cDovL2dyYXBoLmZhY2Vib2suY29tL3YyLjUvMTI1ODAwMzA3NC9waWN0dXJlP3R5cGU9bGFyZ2UiLCJlbWFpbCI6Inlrbng0QGxpdmUuY29tLm14IiwiY3JlYXRlZCI6MTQ0Mjc3ODk0MzYzNywic2VlZCI6NDU5OTMzNTc4LCJpYXQiOjE0NDU4MzM3ODh9.5VQO99fxXCPmlGN7bYv4B8WPyJgkFbYPDbkrKpgoWvQ</string>
    <string name="title_activity_client_details">Client Details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="simple_pay_day_string">%1$s, %2$s</string>
    <string name="msg_next_payment">"Next payment: "</string>
    <string name="msg_txt_total">Total: %s</string>
    <string name="title_payment">Payment</string>
    <string name="title_amount">Amount</string>
    <string name="notification_progress">Uploading</string>
    <string name="notifaction_success">Upload complete</string>
    <string name="notification_share_link">Share</string>
    <string name="notification_fail">Upload failed</string>
    <string-array name="product_colors">
        <item>Red</item>
        <item>White</item>
        <item>Blue</item>
        <item>Black</item>
        <item>Purple</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Brown</item>
    </string-array>
    <string-array name="days">
        <item>Domingo</item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
    </string-array>
    <string-array name="time">
        <item>0:00am</item>
        <item>1:00am</item>
        <item>2:00am</item>
        <item>3:00am</item>
        <item>4:00am</item>
        <item>5:00am</item>
        <item>6:00am</item>
        <item>7:00am</item>
        <item>8:00am</item>
        <item>9:00am</item>
        <item>10:00am</item>
        <item>11:00am</item>
        <item>12:00pm</item>
        <item>1:00pm</item>
        <item>2:00pm</item>
        <item>3:00pm</item>
        <item>4:00pm</item>
        <item>5:00pm</item>
        <item>6:00pm</item>
        <item>7:00pm</item>
        <item>8:00pm</item>
        <item>9:00pm</item>
        <item>10:00pm</item>
        <item>11:00pm</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_client">Choose an action for client</string>
    <string name="action_product">Choose an action for product</string>
    <string name="string_today">Today</string>
    <string name="input_signup">Sign Up</string>
    <string name="input_email">Email</string>
    <string name="input_hint">Email</string>
    <string name="empty" />
    <string name="txt_day_bet_pay">Days between payments</string>
    <string name="time_avail">Time available</string>
    <string name="days_avail">Days available</string>
    <string name="txt_sell">Sell</string>
    <string name="txt_save">Save</string>
</resources>
