<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:paddingLeft="@dimen/default_padding" android:paddingRight="@dimen/default_padding" android:paddingBottom="@dimen/default_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView android:id="@+id/card_view_client" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?android:selectableItemBackground" android:transitionName="@string/transition_cardview" card_view:cardUseCompatPadding="true">
        <RelativeLayout android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/client_image" android:layout_width="96.0dip" android:layout_height="96.0dip" android:layout_marginRight="16.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentBottom="true" android:layout_centerVertical="true" android:layout_marginEnd="16.0dip" android:layout_alignParentStart="true" android:transitionName="@string/transition_profile" />
            <TextView android:textSize="30.0sp" android:textColor="@color/textColorPrimary" android:id="@+id/client_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/client_image" android:layout_alignParentTop="true" android:layout_toEndOf="@+id/client_image" android:transitionName="@string/transition_name" />
            <TextView android:textColor="@color/textColorSecondary" android:id="@+id/client_address" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/client_image" android:layout_below="@+id/client_name" android:layout_toEndOf="@+id/client_image" android:transitionName="@string/transition_address" />
            <LinearLayout android:orientation="horizontal" android:id="@+id/button_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@+id/client_image" android:layout_below="@+id/client_address" android:layout_toEndOf="@+id/client_image">
                <ImageButton android:id="@+id/location_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_location_on_black_24dp" android:tint="@color/icons" android:layout_weight="1.0" android:transitionName="@string/transition_button_location" style="@style/Widget.AppCompat.Button.Colored" />
                <ImageButton android:id="@+id/email_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_email_black_24dp" android:tint="@color/icons" android:layout_weight="1.0" android:transitionName="@string/transition_button_email" style="@style/Widget.AppCompat.Button.Colored" />
                <ImageButton android:id="@+id/call_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_call_black_24dp" android:tint="@color/icons" android:layout_weight="1.0" android:transitionName="@string/transition_button_call" style="@style/Widget.AppCompat.Button.Colored" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>