<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/coordination_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar android:id="@+id/toolbar" android:layout_width="fill_parent" android:layout_height="?actionBarSize" android:transitionName="@string/transition_toolbar" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" app:layout_scrollFlags="enterAlways|scroll" />
        <RelativeLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="278.0dip" android:weightSum="1.0" android:transitionName="@string/transition_cardview"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <LinearLayout android:orientation="vertical" android:id="@+id/textLayout" android:layout_width="fill_parent" android:layout_height="72.0dip" android:layout_alignParentLeft="true" android:layout_alignParentStart="true">
                <TextView android:textSize="30.0sp" android:textColor="@color/textColorPrimary" android:id="@+id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="Bang Minah" android:transitionName="@string/transition_name" />
                <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="@color/textColorSecondary" android:id="@+id/email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="5.0dip" android:text="Adsdsdfs #sdfsdf, Asddsds" android:transitionName="@string/transition_address" />
            </LinearLayout>
            <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/circleView" android:layout_width="128.0dip" android:layout_height="128.0dip" android:layout_margin="@dimen/default_margin" android:src="@drawable/shica" android:layout_alignParentTop="true" android:layout_alignParentStart="true" android:transitionName="@string/transition_profile" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/bly" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/textLayout" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" android:layout_centerHorizontal="true">
                <ImageButton android:id="@+id/location_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_location_on_black_24dp" android:tint="@color/icons" android:layout_weight="1.0" android:transitionName="@string/transition_button_location" android:elevation="10.0dip" style="@style/Widget.AppCompat.Button.Colored" />
                <ImageButton android:id="@+id/email_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_email_black_24dp" android:tint="@color/icons" android:layout_weight="1.0" android:transitionName="@string/transition_button_email" android:elevation="10.0dip" style="@style/Widget.AppCompat.Button.Colored" />
                <ImageButton android:id="@+id/call_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_call_black_24dp" android:tint="@color/icons" android:layout_weight="1.0" android:transitionName="@string/transition_button_call" android:elevation="10.0dip" style="@style/Widget.AppCompat.Button.Colored" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.design.widget.FloatingActionButton android:layout_gravity="end|bottom|center" android:id="@+id/fab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/activity_vertical_margin" android:src="@drawable/ic_add_black_24dp" android:tint="@color/icons" app:elevation="6.0dip" app:layout_behavior="com.arekar.android.ventascasaencasa.helpers.ScrollingFABBehavior" app:pressedTranslationZ="12.0dip" app:borderWidth="@dimen/compat_fab_borderwidth" app:backgroundTint="@color/colorAccent" />
    <android.support.v7.widget.RecyclerView android:id="@+id/rv" android:background="@color/divider" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</android.support.design.widget.CoordinatorLayout>