<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/coordination_layout"
    tools:context="com.arekar.android.ventascasacasa.activities.ClientDetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/MyMaterialTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            android:background="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/TransparentText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                app:layout_collapseMode="parallax"
                android:id="@+id/container">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:id="@+id/bgimage"

                    />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:src="@drawable/shica"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_margin="32dp"
                    android:transitionName="@string/transition_profile" />

                <LinearLayout
                    android:id="@+id/header_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"

                    android:gravity="center_vertical"
                    android:minHeight="120dp"
                    android:orientation="vertical"
                    android:paddingBottom="32dp"
                    android:paddingLeft="32dp">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="My title"
                        android:textColor="@android:color/white"
                        android:textColorHighlight="@android:color/black"
                        android:shadowColor="@android:color/black"
                        android:transitionName="@string/transition_name"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/subtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Subtitle"
                        android:transitionName="@string/transition_address"
                        android:textColor="@android:color/white"
                        android:textColorHighlight="@android:color/darker_gray"
                        android:shadowColor="@android:color/darker_gray"
                        android:textSize="14sp" />
                </LinearLayout>


            </FrameLayout>
            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="@drawable/shape_toolbar_black_gradient"-->
            <!--app:layout_collapseMode="pin"/>-->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/MyMaterialTheme.PopupOverlay" />


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_client_details" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_black_24dp"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
